--- a/assets/styles/partials/section_content.css
+++ b/assets/styles/partials/section_content.css
@@ -1,15 +1,15 @@
-.section_content {
-  @apply grid grid-cols-1;
+.section_content, 
+.section_explorers {
+  @apply grid grid-cols-1 pb-2;
   grid-template-rows: 1fr minmax(auto, 100vh) 1fr;
   .section_content_background {
     @apply row-start-1 row-span-full col-start-1 col-span-full;
+    min-height: 100%;
     img {
       width: 100%;
       height: 100%;
-      max-height: 100vh;
       object-fit: cover;
       object-position: center;
-      /* filter: brightness(.7); */
     }
   }
   .section_content_holder {
