Add some content & create section 02 as intro for missions

--- a/assets/styles/partials/section_content.css
+++ b/assets/styles/partials/section_content.css
@@ -1,4 +1,4 @@
-.section_content, 
+.section_content,
 .section_explorers {
   @apply grid grid-cols-1 pb-2;
   grid-template-rows: 1fr minmax(auto, 100vh) 1fr;
@@ -14,7 +14,7 @@
   }
   .section_content_holder {
     @apply row-start-1 row-span-full col-start-1 col-span-full self-center justify-center;
-    @apply grid grid-cols-5 gap-4 xl:container xl:m-auto min-h-screen py-20;
+    @apply grid grid-cols-5 gap-4 xl:container xl:m-auto min-h-screen p-20;
   }
 
   p {
