--- a/assets/styles/partials/section_content.css
+++ b/assets/styles/partials/section_content.css
@@ -1,7 +1,8 @@
 .section_content,
 .section_explorers {
   @apply grid grid-cols-1 pb-2;
-  grid-template-rows: 1fr minmax(auto, 100vh) 1fr;
+  grid-template-rows: 1fr minmax(auto, 100%) 1fr;
+  
   .section_content_background {
     @apply row-start-1 row-span-full col-start-1 col-span-full;
     min-height: 100%;
@@ -12,6 +13,7 @@
       object-position: center;
     }
   }
+  
   .section_content_holder {
     @apply row-start-1 row-span-full col-start-1 col-span-full self-center justify-center;
     @apply grid grid-cols-5 gap-4 xl:container xl:m-auto min-h-screen p-20;
