--- a/assets/styles/partials/section_content.css
+++ b/assets/styles/partials/section_content.css
@@ -1,5 +1,6 @@
 .section_content,
-.section_explorers {
+.section_explorers,
+.section_machines {
   @apply grid grid-cols-1 pb-2;
   grid-template-rows: 1fr minmax(auto, 100vh) 1fr;
   .section_content_background {
@@ -17,7 +18,11 @@
     @apply grid grid-cols-5 gap-4 xl:container xl:m-auto min-h-screen p-20;
     @apply bg-black bg-opacity-50;
   }
-
+  .section_content_holder_8 {
+    @apply row-start-1 row-span-full col-start-1 col-span-full self-center justify-center;
+    @apply grid grid-cols-8 gap-4 xl:container xl:m-auto min-h-screen p-20;
+    @apply bg-black bg-opacity-50;
+  }
 
   p {
       max-width: 60ch;
