changes in animation on click continuar

--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -9,9 +9,9 @@
   -ms-backface-visibility: hidden;
   -o-backface-visibility: hidden;
 }
-html {
+/* html {
   scroll-behavior: smooth;
-}
+} */
 
 .root {
   @apply font-serif;
