Remove spiner lib. Add new backgrounds. Refactor 360 & spiner styles

--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -1,5 +1,6 @@
 @import './lib/fontface.css';
 @import './partials/resources.css';
+@import './partials/inputs.css';
 
 * {
   /* @apply border border-blue-400; */
