--- a/assets/styles/lib/fontface.css
+++ b/assets/styles/lib/fontface.css
@@ -1,72 +1,181 @@
 @font-face {
-    font-family: 'Alegreya';
-    src: url('~/static/fonts/alegreya/Alegreya-Italic.woff2') format('woff2'),
-        url('~/static/fonts/alegreya/Alegreya-Italic.woff') format('woff');
-    font-weight: normal;
-    font-style: italic;
-    font-display: swap;
+  font-family: 'Alegreya';
+  src: url('~/assets/fonts/alegreya/Alegreya-BoldItalic.eot');
+  src: url('~/assets/fonts/alegreya/Alegreya-BoldItalic.eot?#iefix')
+      format('embedded-opentype'),
+    url('~/assets/fonts/alegreya/Alegreya-BoldItalic.woff2') format('woff2'),
+    url('~/assets/fonts/alegreya/Alegreya-BoldItalic.woff') format('woff'),
+    url('~/assets/fonts/alegreya/Alegreya-BoldItalic.ttf') format('truetype'),
+    url('~/assets/fonts/alegreya/Alegreya-BoldItalic.svg#Alegreya-BoldItalic')
+      format('svg');
+  font-weight: bold;
+  font-style: italic;
+  font-display: swap;
 }
 
 @font-face {
-    font-family: 'Alegreya';
-    src: url('~/static/fonts/alegreya/Alegreya-Regular.woff2') format('woff2'),
-        url('~/static/fonts/alegreya/Alegreya-Regular.woff') format('woff');
-    font-weight: normal;
-    font-style: normal;
-    font-display: swap;
+  font-family: 'Alegreya';
+  src: url('~/assets/fonts/alegreya/Alegreya-Black.eot');
+  src: url('~/assets/fonts/alegreya/Alegreya-Black.eot?#iefix')
+      format('embedded-opentype'),
+    url('~/assets/fonts/alegreya/Alegreya-Black.woff2') format('woff2'),
+    url('~/assets/fonts/alegreya/Alegreya-Black.woff') format('woff'),
+    url('~/assets/fonts/alegreya/Alegreya-Black.ttf') format('truetype'),
+    url('~/assets/fonts/alegreya/Alegreya-Black.svg#Alegreya-Black')
+      format('svg');
+  font-weight: 900;
+  font-style: normal;
+  font-display: swap;
 }
 
 @font-face {
-    font-family: 'Alegreya Sans';
-    src: url('~/static/fonts/alegreya/AlegreyaSans-Bold.woff2') format('woff2'),
-        url('~/static/fonts/alegreya/AlegreyaSans-Bold.woff') format('woff');
-    font-weight: 700;
-    font-style: normal;
-    font-display: swap;
+  font-family: 'Alegreya';
+  src: url('~/assets/fonts/alegreya/Alegreya-ExtraBold.eot');
+  src: url('~/assets/fonts/alegreya/Alegreya-ExtraBold.eot?#iefix')
+      format('embedded-opentype'),
+    url('~/assets/fonts/alegreya/Alegreya-ExtraBold.woff2') format('woff2'),
+    url('~/assets/fonts/alegreya/Alegreya-ExtraBold.woff') format('woff'),
+    url('~/assets/fonts/alegreya/Alegreya-ExtraBold.ttf') format('truetype'),
+    url('~/assets/fonts/alegreya/Alegreya-ExtraBold.svg#Alegreya-ExtraBold')
+      format('svg');
+  font-weight: bold;
+  font-style: normal;
+  font-display: swap;
 }
 
 @font-face {
-    font-family: 'Alegreya Sans';
-    src: url('~/static/fonts/alegreya/AlegreyaSans-BoldItalic.woff2') format('woff2'),
-        url('~/static/fonts/alegreya/AlegreyaSans-BoldItalic.woff') format('woff');
-    font-weight: 700;
-    font-style: italic;
-    font-display: swap;
+  font-family: 'Alegreya';
+  src: url('~/assets/fonts/alegreya/Alegreya-Bold.eot');
+  src: url('~/assets/fonts/alegreya/Alegreya-Bold.eot?#iefix')
+      format('embedded-opentype'),
+    url('~/assets/fonts/alegreya/Alegreya-Bold.woff2') format('woff2'),
+    url('~/assets/fonts/alegreya/Alegreya-Bold.woff') format('woff'),
+    url('~/assets/fonts/alegreya/Alegreya-Bold.ttf') format('truetype'),
+    url('~/assets/fonts/alegreya/Alegreya-Bold.svg#Alegreya-Bold') format('svg');
+  font-weight: bold;
+  font-style: normal;
+  font-display: swap;
 }
 
 @font-face {
-    font-family: 'Alegreya Sans';
-    src: url('~/static/fonts/alegreya/AlegreyaSans-MediumItalic.woff2') format('woff2'),
-        url('~/static/fonts/alegreya/AlegreyaSans-MediumItalic.woff') format('woff');
-    font-weight: 600;
-    font-style: italic;
-    font-display: swap;
+  font-family: 'Alegreya';
+  src: url('~/assets/fonts/alegreya/Alegreya-BlackItalic.eot');
+  src: url('~/assets/fonts/alegreya/Alegreya-BlackItalic.eot?#iefix')
+      format('embedded-opentype'),
+    url('~/assets/fonts/alegreya/Alegreya-BlackItalic.woff2') format('woff2'),
+    url('~/assets/fonts/alegreya/Alegreya-BlackItalic.woff') format('woff'),
+    url('~/assets/fonts/alegreya/Alegreya-BlackItalic.ttf') format('truetype'),
+    url('~/assets/fonts/alegreya/Alegreya-BlackItalic.svg#Alegreya-BlackItalic')
+      format('svg');
+  font-weight: 900;
+  font-style: italic;
+  font-display: swap;
 }
 
 @font-face {
-    font-family: 'Alegreya Sans';
-    src: url('~/static/fonts/alegreya/AlegreyaSans-Medium.woff2') format('woff2'),
-        url('~/static/fonts/alegreya/AlegreyaSans-Medium.woff') format('woff');
-    font-weight: 600;
-    font-style: normal;
-    font-display: swap;
+  font-family: 'Alegreya';
+  src: url('~/assets/fonts/alegreya/Alegreya-MediumItalic.eot');
+  src: url('~/assets/fonts/alegreya/Alegreya-MediumItalic.eot?#iefix')
+      format('embedded-opentype'),
+    url('~/assets/fonts/alegreya/Alegreya-MediumItalic.woff2') format('woff2'),
+    url('~/assets/fonts/alegreya/Alegreya-MediumItalic.woff') format('woff'),
+    url('~/assets/fonts/alegreya/Alegreya-MediumItalic.ttf') format('truetype'),
+    url('~/assets/fonts/alegreya/Alegreya-MediumItalic.svg#Alegreya-MediumItalic')
+      format('svg');
+  font-weight: 500;
+  font-style: italic;
+  font-display: swap;
 }
 
 @font-face {
-    font-family: 'Alegreya Sans';
-    src: url('~/static/fonts/alegreya/AlegreyaSans-Regular.woff2') format('woff2'),
-        url('~/static/fonts/alegreya/AlegreyaSans-Regular.woff') format('woff');
-    font-weight: normal;
-    font-style: normal;
-    font-display: swap;
+  font-family: 'Alegreya';
+  src: url('~/assets/fonts/alegreya/Alegreya-ExtraBoldItalic.eot');
+  src: url('~/assets/fonts/alegreya/Alegreya-ExtraBoldItalic.eot?#iefix')
+      format('embedded-opentype'),
+    url('~/assets/fonts/alegreya/Alegreya-ExtraBoldItalic.woff2')
+      format('woff2'),
+    url('~/assets/fonts/alegreya/Alegreya-ExtraBoldItalic.woff') format('woff'),
+    url('~/assets/fonts/alegreya/Alegreya-ExtraBoldItalic.ttf')
+      format('truetype'),
+    url('~/assets/fonts/alegreya/Alegreya-ExtraBoldItalic.svg#Alegreya-ExtraBoldItalic')
+      format('svg');
+  font-weight: bold;
+  font-style: italic;
+  font-display: swap;
 }
 
 @font-face {
-    font-family: 'Alegreya Sans';
-    src: url('~/static/fonts/alegreya/AlegreyaSans-Italic.woff2') format('woff2'),
-        url('~/static/fonts/alegreya/AlegreyaSans-Italic.woff') format('woff');
-    font-weight: normal;
-    font-style: italic;
-    font-display: swap;
+  font-family: 'Alegreya';
+  src: url('~/assets/fonts/alegreya/Alegreya-Regular.eot');
+  src: url('~/assets/fonts/alegreya/Alegreya-Regular.eot?#iefix')
+      format('embedded-opentype'),
+    url('~/assets/fonts/alegreya/Alegreya-Regular.woff2') format('woff2'),
+    url('~/assets/fonts/alegreya/Alegreya-Regular.woff') format('woff'),
+    url('~/assets/fonts/alegreya/Alegreya-Regular.ttf') format('truetype'),
+    url('~/assets/fonts/alegreya/Alegreya-Regular.svg#Alegreya-Regular')
+      format('svg');
+  font-weight: normal;
+  font-style: normal;
+  font-display: swap;
 }
 
+@font-face {
+  font-family: 'Alegreya';
+  src: url('~/assets/fonts/alegreya/Alegreya-SemiBold.eot');
+  src: url('~/assets/fonts/alegreya/Alegreya-SemiBold.eot?#iefix')
+      format('embedded-opentype'),
+    url('~/assets/fonts/alegreya/Alegreya-SemiBold.woff2') format('woff2'),
+    url('~/assets/fonts/alegreya/Alegreya-SemiBold.woff') format('woff'),
+    url('~/assets/fonts/alegreya/Alegreya-SemiBold.ttf') format('truetype'),
+    url('~/assets/fonts/alegreya/Alegreya-SemiBold.svg#Alegreya-SemiBold')
+      format('svg');
+  font-weight: 600;
+  font-style: normal;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: 'Alegreya';
+  src: url('~/assets/fonts/alegreya/Alegreya-SemiBoldItalic.eot');
+  src: url('~/assets/fonts/alegreya/Alegreya-SemiBoldItalic.eot?#iefix')
+      format('embedded-opentype'),
+    url('~/assets/fonts/alegreya/Alegreya-SemiBoldItalic.woff2') format('woff2'),
+    url('~/assets/fonts/alegreya/Alegreya-SemiBoldItalic.woff') format('woff'),
+    url('~/assets/fonts/alegreya/Alegreya-SemiBoldItalic.ttf')
+      format('truetype'),
+    url('~/assets/fonts/alegreya/Alegreya-SemiBoldItalic.svg#Alegreya-SemiBoldItalic')
+      format('svg');
+  font-weight: 600;
+  font-style: italic;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: 'Alegreya';
+  src: url('~/assets/fonts/alegreya/Alegreya-Medium.eot');
+  src: url('~/assets/fonts/alegreya/Alegreya-Medium.eot?#iefix')
+      format('embedded-opentype'),
+    url('~/assets/fonts/alegreya/Alegreya-Medium.woff2') format('woff2'),
+    url('~/assets/fonts/alegreya/Alegreya-Medium.woff') format('woff'),
+    url('~/assets/fonts/alegreya/Alegreya-Medium.ttf') format('truetype'),
+    url('~/assets/fonts/alegreya/Alegreya-Medium.svg#Alegreya-Medium')
+      format('svg');
+  font-weight: 500;
+  font-style: normal;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: 'Alegreya';
+  src: url('~/assets/fonts/alegreya/Alegreya-Italic.eot');
+  src: url('~/assets/fonts/alegreya/Alegreya-Italic.eot?#iefix')
+      format('embedded-opentype'),
+    url('~/assets/fonts/alegreya/Alegreya-Italic.woff2') format('woff2'),
+    url('~/assets/fonts/alegreya/Alegreya-Italic.woff') format('woff'),
+    url('~/assets/fonts/alegreya/Alegreya-Italic.ttf') format('truetype'),
+    url('~/assets/fonts/alegreya/Alegreya-Italic.svg#Alegreya-Italic')
+      format('svg');
+  font-weight: normal;
+  font-style: italic;
+  font-display: swap;
+}
